Update java_env.sh